US7547 - Map labels Reconfigure styles for the canvas (layer with marker labels) to have a lower z-index and similar positioning as background map. This fixes the whole "labels floating over the search bar problem".

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -184,6 +184,15 @@ sebm-google-map {
   }
 }
 
+canvas-map-overlay {
+  display: block;
+  height: calc(100vh - 69px);
+  pointer-events: none;
+  position: absolute;
+  width: 100vw;
+  z-index: 1;
+}
+
 // Map footer
 app-map-footer {
   bottom: 0;
